# Relic2

./: .gitignore  CMakeLists.txt  Findglfw3.cmake  README.md  TODO  main.cpp
Concurrency/: CMakeLists.txt
Concurrency/Locks/: CMakeLists.txt  ReentrantLock.cpp  ReentrantLock.h  ReentrantLock32.cpp  ReentrantLock32.h  ScopedLock.cpp  ScopedLock.h  SpinLock.cpp  SpinLock.h  UnecessaryLock.cpp  UnecessaryLock.h  UnecessaryLockJanitor.cpp  UnecessaryLockJanitor.h
Core/: CMakeLists.txt  IComponent.h  ISystem.h  Relic.cpp  Relic.h  RelicStruct.h  Time.cpp  Time.h  Util.h  World.cpp  World.h
Core/Components/: CMakeLists.txt  SingletonFrameStats.h  SingletonInput.h  SingletonTime.h  TransformComponent.h
Core/SceneGraph/: CMakeLists.txt  SceneGraph.cpp  SceneGraph.h
Core/Systems/: CMakeLists.txt  Input.cpp  Input.h  MeshRotator.cpp  MeshRotator.h  Time.cpp  Time.h
Debugging/: CMakeLists.txt  Logger.cpp  Logger.h
Gameplay/: CMakeLists.txt
Gameplay/Components/: CMakeLists.txt  FPSCameraComponent.h
Gameplay/Systems/: CMakeLists.txt  FPSCameraSystem.cpp  FPSCameraSystem.h
Graphics/: CMakeLists.txt  MaterialUtil.cpp  MaterialUtil.h  MeshComponent.h  Model.h  Renderer.cpp  Renderer.h  Texture.h  VulkanModelExtensions.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.h  Window.cpp  Window.h
Graphics/Components/: CMakeLists.txt  CameraComponent.h  MeshComponent.h  SingletonRenderState.h  SingletonVulkanRenderState.h
Graphics/OpenFBX/: CMakeLists.txt  FBXUtil.cpp  FBXUtil.h
Graphics/Systems/: CMakeLists.txt  Renderer.cpp  Renderer.h  VulkanRenderer.cpp  VulkanRenderer.h
IMGUI/: CMakeLists.txt
Importers/: CMakeLists.txt  IImporter.cpp  IImporter.h  ImportUtil.cpp  ImportUtil.h  ModelImporter.cpp  ModelImporter.h  TextureImporter.cpp  TextureImporter.h
Libraries/: CMakeLists.txt
Libraries/IMGUI/: imgui_impl_vulkan.cpp
Libraries/entt/: CMakeLists.txt
MemoryManager/: CMakeLists.txt  DoubleHeadedStackAllocator.cpp  DoubleHeadedStackAllocator.h  MemoryManager.cpp  MemoryManager.h  StackAllocator.cpp  StackAllocator.h
ResourceManager/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h
ResourceManager/Compression/: CMakeLists.txt  CompressionManager.cpp  CompressionManager.h
ResourceManager/Compression/lz4/: CMakeLists.txt
Shaders/: Test.frag  Test.vert  compile.bat  frag.spv  vert.spv
